<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dip" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" >

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/name_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/username_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/difficulty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/music"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8" >

            <RadioButton
                android:id="@+id/music_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/on" />

            <RadioButton
                android:id="@+id/music_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/choose_eggs"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
   		android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip" >

            <ImageButton
                android:id="@+id/chosenEggButton1"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:background="@drawable/back_button"
                android:padding="8dip"
                android:scaleType="fitCenter"
                android:src="@drawable/egg_bear" />

            <ImageButton
                android:id="@+id/chosenEggButton2"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:background="@drawable/back_button"
                android:padding="8dip"
                android:scaleType="fitCenter"
                android:src="@drawable/egg_bear" />

            <ImageButton
                android:id="@+id/chosenEggButton3"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:background="@drawable/back_button"
                android:padding="8dip"
                android:scaleType="fitCenter"
                android:src="@drawable/egg_bear" />

        </TableRow>
        
        <TableRow >

            <ImageButton
                android:id="@+id/chosenEggButton4"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:background="@drawable/back_button"
                android:padding="8dip"
                android:scaleType="fitCenter"
                android:src="@drawable/egg_bear" />

            <ImageButton
                android:id="@+id/chosenEggButton5"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:background="@drawable/back_button"
                android:padding="8dip"
                android:scaleType="fitCenter"
                android:src="@drawable/egg_bear" />

            <ImageButton
                android:id="@+id/chosenEggButton6"
                android:layout_width="80dip"
                android:layout_height="60dip"
                android:background="@drawable/back_button"
                android:padding="8dip"
                android:scaleType="fitCenter"
                android:src="@drawable/egg_bear" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:padding="5dip"
        android:src="@drawable/back_arrow" />

</LinearLayout>