<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" >

        <TextView
            android:id="@+id/level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/level_label"
            android:textColor="@color/pink_text" />

        <TextView
            android:id="@+id/level_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_1"
            android:textColor="@color/pink_text" />

        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        </FrameLayout>

        <TextView
            android:id="@+id/score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dip"
            android:gravity="right"
            android:text="@string/score_label"
            android:textColor="@color/pink_text" />

        <TextView
            android:id="@+id/score_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_0"
            android:textColor="@color/pink_text" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/timeBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" android:progressDrawable="@drawable/time_bar_definition"/>

    <!-- TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Aqui anira el temps"
        android:textColor="@color/labels" /-->

    <FrameLayout
        android:id="@+id/board_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="@color/background" >

    </FrameLayout>

    <TableLayout
        android:id="@+id/countersTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:stretchColumns="*" android:shrinkColumns="*">

        <TableRow
            android:id="@+id/imagesRow"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginBottom="5dip" >

            <ImageView
                android:id="@+id/boardGameEggImage1"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="0.166"
                android:src="@drawable/egg_bear" />

            <ImageView
                android:id="@+id/boardGameEggImage2"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="0.166"
                android:src="@drawable/egg_rooster" />

            <ImageView
                android:id="@+id/boardGameEggImage3"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="0.166"
                android:src="@drawable/egg_corncob" />

            <ImageView
                android:id="@+id/boardGameEggImage4"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="0.166"
                android:src="@drawable/egg_dog" />

            <ImageView
                android:id="@+id/boardGameEggImage5"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="0.166"
                android:src="@drawable/egg_elephant" />

            <ImageView
                android:id="@+id/boardGameEggImage6"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_weight="0.166"
                android:src="@drawable/egg_penguin" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/remaining0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_0"
                android:textColor="@color/pink_text" />

            <TextView
                android:id="@+id/remaining1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_0"
                android:textColor="@color/pink_text" />

            <TextView
                android:id="@+id/remaining2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_0"
                android:textColor="@color/pink_text" />

            <TextView
                android:id="@+id/remaining3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_0"
                android:textColor="@color/pink_text" />

            <TextView
                android:id="@+id/remaining4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_0"
                android:textColor="@color/pink_text" />

            <TextView
                android:id="@+id/remaining5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_0"
                android:textColor="@color/pink_text" />

        </TableRow>

    </TableLayout>

</LinearLayout>